# updater-generator

./: Cargo.toml  README.md  pyproject.toml
src/git_rs/: Cargo.toml
src/git_rs/src/: changes.rs  lib.rs
zip-test/: Cargo.toml
zip-test/src/: main.rs
