[package]
name = "updater-generator"
version = "0.1.0"
edition = "2021"
authors = ["shenjackyuanjie <3695888@qq.com>"]
description = "A tool to generate updater for your application"
#links = "https://github.com/shenjackyuanjie/updater-generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gix-diff = "0.35.0"
gix-hash = "0.13.0"
gix-odb = "0.52.0"
gix-ref = "0.36.0"
gix-traverse = "0.32.0"

#pyo3 = "0.19.2"

[dependencies.gix-object]
version = "0.36.0"
features = ["verbose-object-parsing-errors"]
